# blackjack-sim

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb
src/blackjack_sim/: __init__.py  cards.py  cli.py  counting.py  engine.py  hand.py  rules.py  simulator.py  stats.py  strategy.py
tests/: test_cards.py  test_counting.py  test_engine.py  test_hand.py  test_simulator.py  test_strategy.py
